--- a/id_card_maker/src/misc/textfield.css
+++ b/id_card_maker/src/misc/textfield.css
@@ -3,4 +3,9 @@ border: 2px black solid;
 margin: .3em .7em;   
 display: flex;
 align-items: center;
+background-color: #eee;
+font-size: 0.8em;
+font-family: Arial, Helvetica, sans-serif;
+height: 2.0em;
+padding: 0 1em;
 }
