--- a/id_card_maker/src/cards/card.css
+++ b/id_card_maker/src/cards/card.css
@@ -1,3 +1,7 @@
+* {
+    -webkit-print-color-adjust: exact !important;   /* Chrome, Safari: Print background-image */
+}
+
 .card {
     display: flex;
     flex-direction: column;
