--- a/id_card_maker/src/misc/picturebox.css
+++ b/id_card_maker/src/misc/picturebox.css
@@ -7,4 +7,11 @@
 
     display: flex;
     align-items: center;
+    overflow: hidden;
+}
+
+.picturebox img {
+    width: 190px;
+    height: 100%;
+    transform: translateX(-44px);
 }
