--- a/id_card_maker/src/misc/textfield.css
+++ b/id_card_maker/src/misc/textfield.css
@@ -6,6 +6,14 @@ align-items: center;
 background-color: #eee;
 font-size: 0.8em;
 font-family: Arial, Helvetica, sans-serif;
-height: 2.0em;
+height: 1.5em;
 padding: 0 1em;
+display: inline-block;
+width: 65%;
+}
+
+.data {
+    font-size: 0.7em;
+    display: inline-block;
+    width: 12%;
 }
