--- a/id_card_maker/src/misc/picturebox.css
+++ b/id_card_maker/src/misc/picturebox.css
@@ -15,3 +15,10 @@
     height: 100%;
     transform: translateX(-44px);
 }
+
+.front2 .picturebox {
+    margin: 7% auto;
+    width: 40%;
+    height: 40%;
+    border: 1px solid black;
+}
