--- a/id_card_maker/src/misc/textfield.css
+++ b/id_card_maker/src/misc/textfield.css
@@ -6,15 +6,20 @@ align-items: center;
 background-color: #eee;
 font-size: 0.8em;
 font-family: Arial, Helvetica, sans-serif;
-height: 2.1em;
+height: 1.8em;
 padding: 0 1em;
 display: inline-block;
 width: 65%;
 border-radius: 10px;
 }
 
+.front2.large .tf {
+    line-height: 1.8em;
+}
+
 .back2 .tf {
     margin-top: 0;
+    line-height: 1.8em;
 }
 
 .large {
@@ -31,11 +36,11 @@ border-radius: 10px;
 .back2 .data{
     display: block;
     width: 60%;
-    height: 1.1em;
+    height: 1.2em;
     text-align: left;
     padding-left: 3em;
     margin-top: 0.77em;
-    margin-bottom: 0;
+    margin-bottom: 2px;
 }
 
 .front2 .data {
