--- a/id_card_maker/src/misc/textfield.css
+++ b/id_card_maker/src/misc/textfield.css
@@ -3,7 +3,7 @@ border: 1px black solid;
 margin: .3em .7em;   
 display: flex;
 align-items: center;
-background-color: #eee;
+background-color: #f4f4f4;
 font-size: 0.8em;
 font-family: Arial, Helvetica, sans-serif;
 height: 1.8em;
