--- a/id_card_maker/src/misc/picturebox.css
+++ b/id_card_maker/src/misc/picturebox.css
@@ -13,9 +13,10 @@
 }
 
 .front2 .picturebox {
-    margin: 7% auto;
+    margin: 7% 30% 7% 30%;
     width: 40%;
     height: 40%;
+    display: inline-block;
 }
 
 .picturebox img {
