--- a/id_card_maker/src/misc/textfield.css
+++ b/id_card_maker/src/misc/textfield.css
@@ -6,24 +6,28 @@ align-items: center;
 background-color: #f4f4f4;
 font-size: 0.8em;
 font-family: Arial, Helvetica, sans-serif;
-height: 1.8em;
+height: 1.6em;
 padding: 0 1em;
 display: inline-block;
 width: 65%;
 border-radius: 10px;
 }
 
-.front2.large .tf {
+/*.front2.large .tf {
     line-height: 1.8em;
+}*/
+
+.front2 .tf {
+    line-height: 1.6em;
 }
 
 .back2 .tf {
     margin-top: 0;
-    line-height: 1.8em;
+    line-height: 1.6em;
 }
 
 .large {
-    height: 2.7em;
+    height: 3.2em;
     vertical-align: bottom;
 }
 
