--- a/id_card_maker/src/receive_list/table.css
+++ b/id_card_maker/src/receive_list/table.css
@@ -6,7 +6,7 @@ table, th, td {
 
 table {
     border-collapse: collapse;
-    width: 80%;
+    width: 88%;
     margin: auto;
 }
 
@@ -14,21 +14,22 @@ th {
     background-color: #eaeaeaea;
 }
 
-
 table td:nth-child(1) {
-    width: 7%;
+    width: 5%;
 }
 
 table td:nth-child(2) {
-    width: 43%;
+    width: 51%;
+    text-align: left;
+    padding-left: 0.7em;
 }
 
 table td:nth-child(3) {
-    width: 20%;
+    width: 17%;
 }
 
 table td:nth-child(4) {
-    width: 30%;
+    width: 27%;
 }
 
 .tablePage {
