--- a/id_card_maker/src/misc/textfield.css
+++ b/id_card_maker/src/misc/textfield.css
@@ -1,6 +1,6 @@
 .tf {
 border: 1px black solid;
-margin: .3em .7em;   
+margin: .25em .7em;   
 display: flex;
 align-items: center;
 background-color: #f4f4f4;
@@ -16,10 +16,6 @@ border-radius: 10px;
 /*.front2.large .tf {
     line-height: 1.8em;
 }*/
-
-.front2 .tf {
-    line-height: 1.6em;
-}
 
 .back2 .tf {
     margin-top: 0;
@@ -43,11 +39,19 @@ border-radius: 10px;
     height: 1.2em;
     text-align: left;
     padding-left: 3em;
-    margin-top: 0.77em;
+    margin-top: 1.275em;
     margin-bottom: 2px;
 }
 
 .front2 .data {
     height: 2.7em;
     vertical-align: center;
+}
+
+
+.nickname {
+    height: 2.4em;
+    line-height: 2.4em;
+    font-size: 2.4em;
+    font-weight: bold;
 }
