--- a/id_card_maker/src/misc/page.css
+++ b/id_card_maker/src/misc/page.css
@@ -9,3 +9,13 @@
    font-size: 0.8em;
    font-weight: 50;
 }
+
+@media print {
+@page {
+   margin-top: 0in !important;
+   margin-bottom: 0.1in !important;
+   margin-left: 0in !important;
+   margin-right: 0.2in !important; 
+ }
+
+}
