--- a/id_card_maker/src/misc/textfield.css
+++ b/id_card_maker/src/misc/textfield.css
@@ -1,6 +1,6 @@
 .tf {
 border: 1px black solid;
-margin: 4px .7em;   
+margin: 4px 10px;   
 display: flex;
 align-items: center;
 background-color: #f4f4f4;
@@ -11,6 +11,7 @@ padding: 0 1em;
 display: inline-block;
 width: 65%;
 border-radius: 10px;
+
 }
 
 /*.front2.large .tf {
@@ -31,12 +32,13 @@ border-radius: 10px;
     font-size: 0.7em;
     display: inline-block;
     width: 12%;
+    
 }
 
 .back2 .data{
     display: block;
     width: 60%;
-    height: 19px;
+    height: 13px;
     text-align: left;
     padding-left: 3em;
     margin-top: 10px;
